--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,7 +34,7 @@ a, a:visited {
 
 .menu_item {
     color: white;
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'Raleway',sans-serif;
     padding-top: .5em;
     padding-bottom: .75em;
     text-align: center;
@@ -46,7 +46,7 @@ a, a:visited {
 
 .text {
     margin: 1em;
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'Raleway',sans-serif;
 }
 
 #opening {
@@ -61,7 +61,7 @@ a, a:visited {
 #opening div {
     color: #eecd62;
     font-size: 5em;
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'Raleway',sans-serif;
     font-variant: small-caps;
     line-height: 40vw;
 }
