Changed image extension in stylesheet to all caps.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,7 +50,7 @@ a, a:visited {
 }
 
 #opening {
-    background-image: url(doe_5643.jpg);
+    background-image: url(doe_5643.JPG);
     background-size: 100%;
     background-attachment: fixed;
     width: 100%;
