--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,20 +50,24 @@ a, a:visited {
 }
 
 #opening {
-    background-image: url(doe_5643.JPG);
+    background-image: url(XBD200602-00028-01.JPG); 
+    /*Photo credit goes to the Lawrence Berkeley National Laboratory.
+    © 2010 The Regents of the University of California, through the Lawrence Berkeley National Laboratory.*/
     background-size: 100%;
     background-attachment: fixed;
+    background-repeat: no-repeat;
     width: 100%;
-    height: 40vw;
+    height: 38vw;
     margin-bottom: 2em;
     text-align: center;
+    overflow: hidden;
 }
 #opening div {
     color: #eecd62;
-    font-size: 5em;
+    font-size: 4.5em;
     font-family: 'Raleway',sans-serif;
     font-variant: small-caps;
-    line-height: 40vw;
+    line-height: 36vw;
 }
 
 #color_pallette {
