The stylesheet did not use the matching extension (case-wise) for the opening photo. This is now fixed.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,7 +50,7 @@ a, a:visited {
 }
 
 #opening {
-    background-image: url(XBD200602-00028-01.JPG); 
+    background-image: url(XBD200602-00028-01.jpg); 
     /*Photo credit goes to the Lawrence Berkeley National Laboratory.
     © 2010 The Regents of the University of California, through the Lawrence Berkeley National Laboratory.*/
     background-size: 100%;
