--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,17 +47,18 @@ a, a:visited {
 .text {
     margin: 1em;
     font-family: 'Raleway',sans-serif;
+    padding: 1em 4em 1em 4em;
 }
 
 #opening {
-    background-image: url(XBD200602-00028-01.jpg); 
+    background-image: url(images/panorama40.jpg); 
     /*Photo credit goes to the Lawrence Berkeley National Laboratory.
     © 2010 The Regents of the University of California, through the Lawrence Berkeley National Laboratory.*/
     background-size: 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
     width: 100%;
-    height: 38vw;
+    height: 35.5vw;
     margin-bottom: 2em;
     text-align: center;
     overflow: hidden;
@@ -68,6 +69,17 @@ a, a:visited {
     font-family: 'Raleway',sans-serif;
     font-variant: small-caps;
     line-height: 36vw;
+}
+
+#links {
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 3em;
+}
+#links div {
+    display: inline-block;
+    width: 18em;
+    vertical-align: middle;
 }
 
 #color_pallette {
