--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,25 +50,26 @@ a, a:visited {
 .text {
     margin: 1em;
     font-family: 'Raleway',sans-serif;
-    padding: 1em 4em 1em 4em;
+    padding: 1em 5em 1em 5em;
 }
 
 #opening {
-    background-image: url(images/panorama40.jpg); 
+    background-color: #9ccdff;
+    background-image: url(images/panorama40p.jpg); 
     /*Photo credit goes to the Lawrence Berkeley National Laboratory.
-    © 2010 The Regents of the University of California, through the Lawrence Berkeley National Laboratory.*/
+    Â© 2010 The Regents of the University of California, through the Lawrence Berkeley National Laboratory.*/
     background-size: 100%;
-    background-attachment: fixed;
+/*     background-attachment: fixed; */
     background-repeat: no-repeat;
     width: 100%;
-    height: 35.5vw;
-    margin-bottom: 2em;
+    height: 39vw;
+    margin-bottom: 1em;
     text-align: center;
     overflow: hidden;
 }
 #opening div {
     color: #eecd62;
-    font-size: 4.5em;
+    font-size: 4em;
     font-family: 'Raleway',sans-serif;
     font-variant: small-caps;
     line-height: 36vw;
@@ -122,37 +123,3 @@ a, a:visited {
     #deeeff
     #4a73ac
     #7b5241 */
-/*img {
-    display: block;
-    height: 100px;
-    width: 300px;
-    margin: auto;
-}
-
-p {
-    text-align: center;
-    font-family: Garamond, serif;
-    font-size: 18px;
-}
-
-div {
-    border-radius: 5px;
-    border: 2px solid #6495ED;
-    background-color: #BCD2EE;
-    height: 50px;
-    width: 120px;
-    margin: auto;
-    text-align: center;
-}
-
-a {
-    text-decoration: none;
-    color: #3D59AB;
-    font-family: Verdana, sans-serif;
-}
-
-span {
-    font-weight: bold;
-    font-size: 18px;
-    color: #ffffff;
-}*/
